// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioCheckToggleCard Checkbox Card should render checked state UI correctly 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c10 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24;
}

.c11 {
  outline: none;
}

.c2 {
  background-color: #fff;
  color: #001833;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:hover + div {
  border-color: #0068ef;
}

.c1:hover + div svg {
  color: #0068ef;
}

.c1:focus-visible + div div.cardIcon > svg {
  border-color: #4f6f8f;
  box-shadow: inset 0 0 0 5px #f4f6f8;
}

.c1:active + div,
.c1:checked:hover + div {
  border-color: #049;
}

.c1:active + div div.cardIcon > svg,
.c1:checked:hover + div div.cardIcon > svg {
  color: #049;
}

.c1:checked + div {
  background-color: #e8f2ff;
  border: 1px solid #0068ef;
}

.c1:checked + div div.cardIcon > svg {
  color: #0068ef;
}

.c1:checked:focus-visible + div div.cardIcon > svg {
  border-color: #049;
}

.c4 {
  border: 1px solid transparent;
  border-radius: 12px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  cursor: pointer;
  padding: 16px;
}

.c6 {
  min-width: 0;
  width: 100%;
}

.c6 + * {
  margin-top: 16px;
}

.c8 {
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 > :first-child + * {
  margin-top: 16px;
}

.c9 {
  line-height: 0px;
  margin: 0 0 0 16px;
}

.c9 > svg {
  border: 1px solid transparent;
  border-radius: 4px;
  color: #4f6f8f;
  padding: 2px;
}

<div
    class="c0"
  >
    <label
      data-testid="rdt-card-label"
      for="radio-1_example-1"
    >
      <input
        checked=""
        class="c1"
        id="radio-1_example-1"
        name="radio-1"
        role="checkbox"
        type="checkbox"
        value="example-1"
      />
      <div
        class="c2 c3 c4"
        color="background.lightest"
        data-testid="rdt-card-main"
      >
        <div
          class="c5 c6"
          data-testid="rdt-card-header"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
              data-testid="rdt-card-title"
            >
              Title
            </div>
          </div>
          <div
            class="c9 cardIcon"
          >
            <svg
              aria-hidden="true"
              class="c10 c11"
              fill="currentcolor"
              focusable="false"
              height="24"
              role="img"
              tabindex="-1"
              viewBox="0 -960 960 960"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M424-424l-86-86q-11-11-28-11t-28 11q-11 11-11 28t11 28l114 114q12 12 28 12t28-12l226-226q11-11 11-28t-11-28q-11-11-28-11t-28 11L424-424zM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`RadioCheckToggleCard Checkbox Card should render unchecked state UI correctly 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c10 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24;
}

.c11 {
  outline: none;
}

.c2 {
  background-color: #fff;
  color: #001833;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:hover + div {
  border-color: #0068ef;
}

.c1:hover + div svg {
  color: #0068ef;
}

.c1:focus-visible + div div.cardIcon > svg {
  border-color: #4f6f8f;
  box-shadow: inset 0 0 0 5px #f4f6f8;
}

.c1:active + div,
.c1:checked:hover + div {
  border-color: #049;
}

.c1:active + div div.cardIcon > svg,
.c1:checked:hover + div div.cardIcon > svg {
  color: #049;
}

.c1:checked + div {
  background-color: #e8f2ff;
  border: 1px solid #0068ef;
}

.c1:checked + div div.cardIcon > svg {
  color: #0068ef;
}

.c1:checked:focus-visible + div div.cardIcon > svg {
  border-color: #049;
}

.c4 {
  border: 1px solid transparent;
  border-radius: 12px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  cursor: pointer;
  padding: 16px;
}

.c6 {
  min-width: 0;
  width: 100%;
}

.c6 + * {
  margin-top: 16px;
}

.c8 {
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 > :first-child + * {
  margin-top: 16px;
}

.c9 {
  line-height: 0px;
  margin: 0 0 0 16px;
}

.c9 > svg {
  border: 1px solid transparent;
  border-radius: 4px;
  color: #4f6f8f;
  padding: 2px;
}

<div
    class="c0"
  >
    <label
      data-testid="rdt-card-label"
      for="radio-1_example-1"
    >
      <input
        class="c1"
        id="radio-1_example-1"
        name="radio-1"
        role="checkbox"
        type="checkbox"
        value="example-1"
      />
      <div
        class="c2 c3 c4"
        color="background.lightest"
        data-testid="rdt-card-main"
      >
        <div
          class="c5 c6"
          data-testid="rdt-card-header"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
              data-testid="rdt-card-title"
            >
              Title
            </div>
          </div>
          <div
            class="c9 cardIcon"
          >
            <svg
              aria-hidden="true"
              class="c10 c11"
              fill="currentcolor"
              focusable="false"
              height="24"
              role="img"
              tabindex="-1"
              viewBox="0 -960 960 960"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200zm0-80h560v-560H200v560z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`RadioCheckToggleCard Radio Card should render checked state UI correctly 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c10 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24;
}

.c11 {
  outline: none;
}

.c2 {
  background-color: #fff;
  color: #001833;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:hover + div {
  border-color: #0068ef;
}

.c1:hover + div svg {
  color: #0068ef;
}

.c1:focus-visible + div div.cardIcon > svg {
  border-color: #4f6f8f;
  box-shadow: inset 0 0 0 5px #f4f6f8;
}

.c1:active + div,
.c1:checked:hover + div {
  border-color: #049;
}

.c1:active + div div.cardIcon > svg,
.c1:checked:hover + div div.cardIcon > svg {
  color: #049;
}

.c1:checked + div {
  background-color: #e8f2ff;
  border: 1px solid #0068ef;
}

.c1:checked + div div.cardIcon > svg {
  color: #0068ef;
}

.c1:checked:focus-visible + div div.cardIcon > svg {
  border-color: #049;
}

.c4 {
  border: 1px solid transparent;
  border-radius: 12px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  cursor: pointer;
  padding: 16px;
}

.c6 {
  min-width: 0;
  width: 100%;
}

.c6 + * {
  margin-top: 16px;
}

.c8 {
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 > :first-child + * {
  margin-top: 16px;
}

.c9 {
  line-height: 0px;
  margin: 0 0 0 16px;
}

.c9 > svg {
  border: 1px solid transparent;
  border-radius: 9999px;
  color: #4f6f8f;
  padding: 2px;
}

<div
    class="c0"
  >
    <label
      data-testid="rdt-card-label"
      for="radio-1_example-1"
    >
      <input
        checked=""
        class="c1"
        id="radio-1_example-1"
        name="radio-1"
        role="radio"
        type="radio"
        value="example-1"
      />
      <div
        class="c2 c3 c4"
        color="background.lightest"
        data-testid="rdt-card-main"
      >
        <div
          class="c5 c6"
          data-testid="rdt-card-header"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
              data-testid="rdt-card-title"
            >
              Title
            </div>
          </div>
          <div
            class="c9 cardIcon"
          >
            <svg
              aria-hidden="true"
              class="c10 c11"
              fill="currentcolor"
              focusable="false"
              height="24"
              role="img"
              tabindex="-1"
              viewBox="0 -960 960 960"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M480-280q83 0 141.5-58.5T680-480q0-83-58.5-141.5T480-680q-83 0-141.5 58.5T280-480q0 83 58.5 141.5T480-280zm0 200q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93zm0-320z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`RadioCheckToggleCard Radio Card should render unchecked state UI correctly 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c10 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24;
}

.c11 {
  outline: none;
}

.c2 {
  background-color: #fff;
  color: #001833;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:hover + div {
  border-color: #0068ef;
}

.c1:hover + div svg {
  color: #0068ef;
}

.c1:focus-visible + div div.cardIcon > svg {
  border-color: #4f6f8f;
  box-shadow: inset 0 0 0 5px #f4f6f8;
}

.c1:active + div,
.c1:checked:hover + div {
  border-color: #049;
}

.c1:active + div div.cardIcon > svg,
.c1:checked:hover + div div.cardIcon > svg {
  color: #049;
}

.c1:checked + div {
  background-color: #e8f2ff;
  border: 1px solid #0068ef;
}

.c1:checked + div div.cardIcon > svg {
  color: #0068ef;
}

.c1:checked:focus-visible + div div.cardIcon > svg {
  border-color: #049;
}

.c4 {
  border: 1px solid transparent;
  border-radius: 12px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  cursor: pointer;
  padding: 16px;
}

.c6 {
  min-width: 0;
  width: 100%;
}

.c6 + * {
  margin-top: 16px;
}

.c8 {
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 > :first-child + * {
  margin-top: 16px;
}

.c9 {
  line-height: 0px;
  margin: 0 0 0 16px;
}

.c9 > svg {
  border: 1px solid transparent;
  border-radius: 9999px;
  color: #4f6f8f;
  padding: 2px;
}

<div
    class="c0"
  >
    <label
      data-testid="rdt-card-label"
      for="radio-1_example-1"
    >
      <input
        class="c1"
        id="radio-1_example-1"
        name="radio-1"
        role="radio"
        type="radio"
        value="example-1"
      />
      <div
        class="c2 c3 c4"
        color="background.lightest"
        data-testid="rdt-card-main"
      >
        <div
          class="c5 c6"
          data-testid="rdt-card-header"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
              data-testid="rdt-card-title"
            >
              Title
            </div>
          </div>
          <div
            class="c9 cardIcon"
          >
            <svg
              aria-hidden="true"
              class="c10 c11"
              fill="currentcolor"
              focusable="false"
              height="24"
              role="img"
              tabindex="-1"
              viewBox="0 -960 960 960"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93zm0-320z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`RadioCheckToggleCard Toggle Card should render checked state UI correctly 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c22 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 16;
}

.c23 {
  outline: none;
}

.c2 {
  background-color: #fff;
  color: #001833;
}

.c10 {
  width: 24;
  height: 24;
}

.c11 {
  background-color: #0068ef;
  color: #fff;
  border-radius: 9999px;
  height: 24px;
  width: 45px;
}

.c16 {
  border-radius: 9999px;
  width: calc(100% + 8px);
}

.c19 {
  background-color: #fff;
  color: #001833;
  border-radius: 9999px;
  width: 20px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c17 {
  position: absolute;
  left: -4px;
  top: -4px;
}

.c20 {
  position: absolute;
  left: 23px;
  top: 2px;
}

.c14 {
  position: absolute;
  z-index: 1;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  margin: 0;
  cursor: pointer;
}

.c18 {
  height: calc(100% + 8px);
  opacity: 0;
  background-color: #0068ef4C;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 20px;
  cursor: pointer;
  z-index: 2;
  -webkit-transition: left 0.3s;
  transition: left 0.3s;
}

.c12 {
  position: relative;
  height: 24px;
  -webkit-transition: background-color 0.15s ease 0s;
  transition: background-color 0.15s ease 0s;
  min-width: 45px;
}

.c12 .c13:focus-visible + .c15 {
  opacity: 1;
}

.c12:hover:not([disabled]) {
  background-color: #049;
}

.c12:hover:not([disabled]) > #circle-handle {
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 2px 8px 0 rgba(0,0,0,0.16),0 10px 8px -5px rgba(0,0,0,0.16),0 12px 32px -2px rgba(0,0,0,0.16);
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:hover + div {
  border-color: #0068ef;
}

.c1:hover + div svg {
  color: #0068ef;
}

.c1:focus-visible + div div.cardIcon > svg {
  border-color: #4f6f8f;
  box-shadow: inset 0 0 0 5px #f4f6f8;
}

.c1:active + div,
.c1:checked:hover + div {
  border-color: #049;
}

.c1:active + div div.cardIcon > svg,
.c1:checked:hover + div div.cardIcon > svg {
  color: #049;
}

.c1:checked + div {
  background-color: #e8f2ff;
  border: 1px solid #0068ef;
}

.c1:checked + div div.cardIcon > svg {
  color: #0068ef;
}

.c1:checked:focus-visible + div div.cardIcon > svg {
  border-color: #049;
}

.c4 {
  border: 1px solid transparent;
  border-radius: 12px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  cursor: pointer;
  padding: 16px;
}

.c6 {
  min-width: 0;
  width: 100%;
}

.c6 + * {
  margin-top: 16px;
}

.c8 {
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 > :first-child + * {
  margin-top: 16px;
}

.c9 {
  line-height: 0px;
  margin: 0 0 0 16px;
}

.c9 > svg {
  border: 1px solid transparent;
  border-radius: 9999px;
  color: #4f6f8f;
  padding: 2px;
}

<div
    class="c0"
  >
    <label
      data-testid="rdt-card-label"
      for="radio-1_example-1"
    >
      <input
        checked=""
        class="c1"
        id="radio-1_example-1"
        name="radio-1"
        role="checkbox"
        type="checkbox"
        value="example-1"
      />
      <div
        class="c2 c3 c4"
        color="background.lightest"
        data-testid="rdt-card-main"
      >
        <div
          class="c5 c6"
          data-testid="rdt-card-header"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
              data-testid="rdt-card-title"
            >
              Title
            </div>
          </div>
          <div
            class="c9 cardIcon"
          >
            <div
              class="c10"
              size="24"
            >
              <div
                class="c11 c12"
                color="primary.base"
                height="24"
                width="45"
              >
                <input
                  aria-checked="true"
                  checked=""
                  class="c13 c14"
                  role="switch"
                  tabindex="0"
                  type="checkbox"
                />
                <div
                  class="c15 c16 c17 c18"
                  width="calc(100% + 8px)"
                />
                <div
                  class="c19 c20 c21"
                  color="background.lightest"
                  data-testid="handle-div"
                  id="circle-handle"
                  width="20px"
                >
                  <svg
                    aria-hidden="true"
                    class="c22 c23"
                    fill="currentcolor"
                    focusable="false"
                    height="16"
                    role="img"
                    tabindex="-1"
                    viewBox="0 -960 960 960"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M382-354l339-339q12-12 28-12t28 12q12 12 12 28.5T777-636L410-268q-12 12-28 12t-28-12L182-440q-12-12-11.5-28.5T183-497q12-12 28.5-12t28.5 12l142 143z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`RadioCheckToggleCard Toggle Card should render unchecked state UI correctly 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c22 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 16;
}

.c23 {
  outline: none;
}

.c2 {
  background-color: secondary.lightest;
  color: #001833;
}

.c10 {
  width: 24;
  height: 24;
}

.c11 {
  background-color: #4f6f8f;
  color: #fff;
  border-radius: 9999px;
  height: 24px;
  width: 45px;
}

.c16 {
  border-radius: 9999px;
  width: calc(100% + 8px);
}

.c19 {
  background-color: #fff;
  color: #001833;
  border-radius: 9999px;
  width: 20px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c17 {
  position: absolute;
  left: -4px;
  top: -4px;
}

.c20 {
  position: absolute;
  left: 2px;
  top: 2px;
}

.c14 {
  position: absolute;
  z-index: 1;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  margin: 0;
  cursor: pointer;
}

.c18 {
  height: calc(100% + 8px);
  opacity: 0;
  background-color: #4f6f8f4C;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 20px;
  cursor: pointer;
  z-index: 2;
  -webkit-transition: left 0.3s;
  transition: left 0.3s;
}

.c12 {
  position: relative;
  height: 24px;
  -webkit-transition: background-color 0.15s ease 0s;
  transition: background-color 0.15s ease 0s;
  min-width: 45px;
}

.c12 .c13:focus-visible + .c15 {
  opacity: 1;
}

.c12:hover:not([disabled]) {
  background-color: #879db3;
}

.c12:hover:not([disabled]) > #circle-handle {
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 2px 8px 0 rgba(0,0,0,0.16),0 10px 8px -5px rgba(0,0,0,0.16),0 12px 32px -2px rgba(0,0,0,0.16);
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:hover + div {
  border-color: #0068ef;
}

.c1:hover + div svg {
  color: #0068ef;
}

.c1:focus-visible + div div.cardIcon > svg {
  border-color: #4f6f8f;
  box-shadow: inset 0 0 0 5px #f4f6f8;
}

.c1:active + div,
.c1:checked:hover + div {
  border-color: #049;
}

.c1:active + div div.cardIcon > svg,
.c1:checked:hover + div div.cardIcon > svg {
  color: #049;
}

.c1:checked + div {
  background-color: #e8f2ff;
  border: 1px solid #0068ef;
}

.c1:checked + div div.cardIcon > svg {
  color: #0068ef;
}

.c1:checked:focus-visible + div div.cardIcon > svg {
  border-color: #049;
}

.c4 {
  border: 1px solid transparent;
  border-radius: 12px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  cursor: pointer;
  padding: 16px;
}

.c6 {
  min-width: 0;
  width: 100%;
}

.c6 + * {
  margin-top: 16px;
}

.c8 {
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 > :first-child + * {
  margin-top: 16px;
}

.c9 {
  line-height: 0px;
  margin: 0 0 0 16px;
}

.c9 > svg {
  border: 1px solid transparent;
  border-radius: 9999px;
  color: #4f6f8f;
  padding: 2px;
}

<div
    class="c0"
  >
    <label
      data-testid="rdt-card-label"
      for="radio-1_example-1"
    >
      <input
        class="c1"
        id="radio-1_example-1"
        name="radio-1"
        role="checkbox"
        type="checkbox"
        value="example-1"
      />
      <div
        class="c2 c3 c4"
        color="secondary.lightest"
        data-testid="rdt-card-main"
      >
        <div
          class="c5 c6"
          data-testid="rdt-card-header"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
              data-testid="rdt-card-title"
            >
              Title
            </div>
          </div>
          <div
            class="c9 cardIcon"
          >
            <div
              class="c10"
              size="24"
            >
              <div
                class="c11 c12"
                color="background.dark"
                height="24"
                width="45"
              >
                <input
                  aria-checked="false"
                  class="c13 c14"
                  role="switch"
                  tabindex="0"
                  type="checkbox"
                />
                <div
                  class="c15 c16 c17 c18"
                  width="calc(100% + 8px)"
                />
                <div
                  class="c19 c20 c21"
                  color="background.lightest"
                  data-testid="handle-div"
                  id="circle-handle"
                  width="20px"
                >
                  <svg
                    aria-hidden="true"
                    class="c22 c23"
                    fill="currentcolor"
                    focusable="false"
                    height="16"
                    role="img"
                    tabindex="-1"
                    viewBox="0 -960 960 960"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M382-354l339-339q12-12 28-12t28 12q12 12 12 28.5T777-636L410-268q-12 12-28 12t-28-12L182-440q-12-12-11.5-28.5T183-497q12-12 28.5-12t28.5 12l142 143z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`RadioCheckToggleCard common should render bold title correctly 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c10 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24;
}

.c11 {
  outline: none;
}

.c2 {
  background-color: #fff;
  color: #001833;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:hover + div {
  border-color: #0068ef;
}

.c1:hover + div svg {
  color: #0068ef;
}

.c1:focus-visible + div div.cardIcon > svg {
  border-color: #4f6f8f;
  box-shadow: inset 0 0 0 5px #f4f6f8;
}

.c1:active + div,
.c1:checked:hover + div {
  border-color: #049;
}

.c1:active + div div.cardIcon > svg,
.c1:checked:hover + div div.cardIcon > svg {
  color: #049;
}

.c1:checked + div {
  background-color: #e8f2ff;
  border: 1px solid #0068ef;
}

.c1:checked + div div.cardIcon > svg {
  color: #0068ef;
}

.c1:checked:focus-visible + div div.cardIcon > svg {
  border-color: #049;
}

.c4 {
  border: 1px solid transparent;
  border-radius: 12px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  cursor: pointer;
  padding: 16px;
}

.c6 {
  min-width: 0;
  width: 100%;
}

.c6 + * {
  margin-top: 16px;
}

.c8 {
  font-weight: 700;
  font-size: 16px;
  line-height: 24px;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 > :first-child + * {
  margin-top: 16px;
}

.c9 {
  line-height: 0px;
  margin: 0 0 0 16px;
}

.c9 > svg {
  border: 1px solid transparent;
  border-radius: 9999px;
  color: #4f6f8f;
  padding: 2px;
}

<div
    class="c0"
  >
    <label
      data-testid="rdt-card-label"
      for="radio-1_example-1"
    >
      <input
        class="c1"
        id="radio-1_example-1"
        name="radio-1"
        role="radio"
        type="radio"
        value="example-1"
      />
      <div
        class="c2 c3 c4"
        color="background.lightest"
        data-testid="rdt-card-main"
      >
        <div
          class="c5 c6"
          data-testid="rdt-card-header"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
              data-testid="rdt-card-title"
            >
              Title
            </div>
          </div>
          <div
            class="c9 cardIcon"
          >
            <svg
              aria-hidden="true"
              class="c10 c11"
              fill="currentcolor"
              focusable="false"
              height="24"
              role="img"
              tabindex="-1"
              viewBox="0 -960 960 960"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93zm0-320z"
              />
            </svg>
          </div>
        </div>
        <div
          class=""
        >
          Happy Priceline!
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`RadioCheckToggleCard common should render children correctly 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c10 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24;
}

.c11 {
  outline: none;
}

.c2 {
  background-color: #fff;
  color: #001833;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:hover + div {
  border-color: #0068ef;
}

.c1:hover + div svg {
  color: #0068ef;
}

.c1:focus-visible + div div.cardIcon > svg {
  border-color: #4f6f8f;
  box-shadow: inset 0 0 0 5px #f4f6f8;
}

.c1:active + div,
.c1:checked:hover + div {
  border-color: #049;
}

.c1:active + div div.cardIcon > svg,
.c1:checked:hover + div div.cardIcon > svg {
  color: #049;
}

.c1:checked + div {
  background-color: #e8f2ff;
  border: 1px solid #0068ef;
}

.c1:checked + div div.cardIcon > svg {
  color: #0068ef;
}

.c1:checked:focus-visible + div div.cardIcon > svg {
  border-color: #049;
}

.c4 {
  border: 1px solid transparent;
  border-radius: 12px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  cursor: pointer;
  padding: 16px;
}

.c6 {
  min-width: 0;
  width: 100%;
}

.c6 + * {
  margin-top: 16px;
}

.c8 {
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 > :first-child + * {
  margin-top: 16px;
}

.c9 {
  line-height: 0px;
  margin: 0 0 0 16px;
}

.c9 > svg {
  border: 1px solid transparent;
  border-radius: 9999px;
  color: #4f6f8f;
  padding: 2px;
}

<div
    class="c0"
  >
    <label
      data-testid="rdt-card-label"
      for="radio-1_example-1"
    >
      <input
        class="c1"
        id="radio-1_example-1"
        name="radio-1"
        role="radio"
        type="radio"
        value="example-1"
      />
      <div
        class="c2 c3 c4"
        color="background.lightest"
        data-testid="rdt-card-main"
      >
        <div
          class="c5 c6"
          data-testid="rdt-card-header"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
              data-testid="rdt-card-title"
            >
              Title
            </div>
          </div>
          <div
            class="c9 cardIcon"
          >
            <svg
              aria-hidden="true"
              class="c10 c11"
              fill="currentcolor"
              focusable="false"
              height="24"
              role="img"
              tabindex="-1"
              viewBox="0 -960 960 960"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93zm0-320z"
              />
            </svg>
          </div>
        </div>
        <div
          class=""
        >
          Happy Priceline!
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`RadioCheckToggleCard common should render children next to title correctly 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c10 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24;
}

.c11 {
  outline: none;
}

.c2 {
  background-color: #fff;
  color: #001833;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:hover + div {
  border-color: #0068ef;
}

.c1:hover + div svg {
  color: #0068ef;
}

.c1:focus-visible + div div.cardIcon > svg {
  border-color: #4f6f8f;
  box-shadow: inset 0 0 0 5px #f4f6f8;
}

.c1:active + div,
.c1:checked:hover + div {
  border-color: #049;
}

.c1:active + div div.cardIcon > svg,
.c1:checked:hover + div div.cardIcon > svg {
  color: #049;
}

.c1:checked + div {
  background-color: #e8f2ff;
  border: 1px solid #0068ef;
}

.c1:checked + div div.cardIcon > svg {
  color: #0068ef;
}

.c1:checked:focus-visible + div div.cardIcon > svg {
  border-color: #049;
}

.c4 {
  border: 1px solid transparent;
  border-radius: 12px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  cursor: pointer;
  padding: 16px;
}

.c6 {
  min-width: 0;
  width: 100%;
}

.c6 + * {
  margin-top: 16px;
}

.c8 {
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 > :first-child + * {
  margin-top: 16px;
}

.c9 {
  line-height: 0px;
  margin: 0 0 0 16px;
}

.c9 > svg {
  border: 1px solid transparent;
  border-radius: 9999px;
  color: #4f6f8f;
  padding: 2px;
}

<div
    class="c0"
  >
    <label
      data-testid="rdt-card-label"
      for="radio-1_example-1"
    >
      <input
        class="c1"
        id="radio-1_example-1"
        name="radio-1"
        role="radio"
        type="radio"
        value="example-1"
      />
      <div
        class="c2 c3 c4"
        color="background.lightest"
        data-testid="rdt-card-main"
      >
        <div
          class="c5 c6"
          data-testid="rdt-card-header"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
              data-testid="rdt-card-title"
            >
              Title
            </div>
            <div
              class=""
            >
              Happy Priceline!
            </div>
          </div>
          <div
            class="c9 cardIcon"
          >
            <svg
              aria-hidden="true"
              class="c10 c11"
              fill="currentcolor"
              focusable="false"
              height="24"
              role="img"
              tabindex="-1"
              viewBox="0 -960 960 960"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93zm0-320z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`RadioCheckToggleCard common should render default UI correctly 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c10 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24;
}

.c11 {
  outline: none;
}

.c2 {
  background-color: #fff;
  color: #001833;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:hover + div {
  border-color: #0068ef;
}

.c1:hover + div svg {
  color: #0068ef;
}

.c1:focus-visible + div div.cardIcon > svg {
  border-color: #4f6f8f;
  box-shadow: inset 0 0 0 5px #f4f6f8;
}

.c1:active + div,
.c1:checked:hover + div {
  border-color: #049;
}

.c1:active + div div.cardIcon > svg,
.c1:checked:hover + div div.cardIcon > svg {
  color: #049;
}

.c1:checked + div {
  background-color: #e8f2ff;
  border: 1px solid #0068ef;
}

.c1:checked + div div.cardIcon > svg {
  color: #0068ef;
}

.c1:checked:focus-visible + div div.cardIcon > svg {
  border-color: #049;
}

.c4 {
  border: 1px solid transparent;
  border-radius: 12px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  cursor: pointer;
  padding: 16px;
}

.c6 {
  min-width: 0;
  width: 100%;
}

.c6 + * {
  margin-top: 16px;
}

.c8 {
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 > :first-child + * {
  margin-top: 16px;
}

.c9 {
  line-height: 0px;
  margin: 0 0 0 16px;
}

.c9 > svg {
  border: 1px solid transparent;
  border-radius: 9999px;
  color: #4f6f8f;
  padding: 2px;
}

<div
    class="c0"
  >
    <label
      data-testid="rdt-card-label"
      for="radio-1_example-1"
    >
      <input
        class="c1"
        id="radio-1_example-1"
        name="radio-1"
        role="radio"
        type="radio"
        value="example-1"
      />
      <div
        class="c2 c3 c4"
        color="background.lightest"
        data-testid="rdt-card-main"
      >
        <div
          class="c5 c6"
          data-testid="rdt-card-header"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
              data-testid="rdt-card-title"
            >
              Title
            </div>
          </div>
          <div
            class="c9 cardIcon"
          >
            <svg
              aria-hidden="true"
              class="c10 c11"
              fill="currentcolor"
              focusable="false"
              height="24"
              role="img"
              tabindex="-1"
              viewBox="0 -960 960 960"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93zm0-320z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`RadioCheckToggleCard common should render left button UI correctly 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c10 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24;
}

.c11 {
  outline: none;
}

.c2 {
  background-color: #fff;
  color: #001833;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:hover + div {
  border-color: #0068ef;
}

.c1:hover + div svg {
  color: #0068ef;
}

.c1:focus-visible + div div.cardIcon > svg {
  border-color: #4f6f8f;
  box-shadow: inset 0 0 0 5px #f4f6f8;
}

.c1:active + div,
.c1:checked:hover + div {
  border-color: #049;
}

.c1:active + div div.cardIcon > svg,
.c1:checked:hover + div div.cardIcon > svg {
  color: #049;
}

.c1:checked + div {
  background-color: #e8f2ff;
  border: 1px solid #0068ef;
}

.c1:checked + div div.cardIcon > svg {
  color: #0068ef;
}

.c1:checked:focus-visible + div div.cardIcon > svg {
  border-color: #049;
}

.c4 {
  border: 1px solid transparent;
  border-radius: 12px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  cursor: pointer;
  padding: 16px;
}

.c6 {
  min-width: 0;
  width: 100%;
}

.c6 + * {
  margin-top: 16px;
}

.c8 {
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 > :first-child + * {
  margin-top: 16px;
}

.c9 {
  line-height: 0px;
  margin: 0 16px 0 0;
}

.c9 > svg {
  border: 1px solid transparent;
  border-radius: 9999px;
  color: #4f6f8f;
  padding: 2px;
}

<div
    class="c0"
  >
    <label
      data-testid="rdt-card-label"
      for="radio-1_example-1"
    >
      <input
        class="c1"
        id="radio-1_example-1"
        name="radio-1"
        role="radio"
        type="radio"
        value="example-1"
      />
      <div
        class="c2 c3 c4"
        color="background.lightest"
        data-testid="rdt-card-main"
      >
        <div
          class="c5 c6"
          data-testid="rdt-card-header"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
              data-testid="rdt-card-title"
            >
              Title
            </div>
          </div>
          <div
            class="c9 cardIcon"
          >
            <svg
              aria-hidden="true"
              class="c10 c11"
              fill="currentcolor"
              focusable="false"
              height="24"
              role="img"
              tabindex="-1"
              viewBox="0 -960 960 960"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93zm0-320z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;
